@@ -1,3 +1,9 @@
+2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCsymt.c,
+	  support/regression/tests/bug-3585.c:
+	  Fix bug #3585.
+
 2023-05-01 Felix Salfelder <felix AT salfelder.org>
 
 	* support/sdbinutils/bfd/{asxxxx,targets}.c:
